# rtes_project

./: .gitignore  CMakeLists.txt  README.md  presentazione_progetto.pptx
apps/01_task/: CMakeLists.txt
apps/02_queues/: CMakeLists.txt
apps/03_events/: CMakeLists.txt
apps/04_smp/: CMakeLists.txt
apps/exam_project/: CMakeLists.txt  main.c
apps/hello_freertos/: CMakeLists.txt  main.c
logger/: log_temp.py  requirements.txt
